# open-job-board

./: Cargo.toml  README.md
.github/workflows/: deploy-functions.yml  integration-tests.yml  scrape-wttj.yml
crates/common/: Cargo.toml
crates/common/src/: client.rs  lib.rs  types.rs
crates/scraper-wttj/: Cargo.toml
crates/scraper-wttj/src/: algolia.rs  main.rs  mapper.rs
docs/: index.html
docs/assets/: search.js  style.css
docs/docs/: api.html  index.html  openapi.yaml
supabase/: config.toml  seed.sql
supabase/functions/_shared/: auth.ts  cors.ts  otel.ts
supabase/functions/api-job-detail/: index.ts
supabase/functions/api-jobs/: index.ts
supabase/functions/api-search/: index.ts
supabase/functions/cleanup-old-jobs/: index.ts
supabase/functions/create-api-key/: index.ts
supabase/functions/login/: index.ts
supabase/functions/manage-profile/: index.ts
supabase/functions/send-matches/: index.ts
supabase/functions/submit-job/: index.ts
supabase/migrations/: 20260303000001_fix_supabase_warnings.sql  20260303000002_auth_sessions.sql  20260303000002_match_schedules.sql  20260303000003_match_cron.sql
tests/integration/: api-job-detail.test.ts  api-jobs.test.ts  api-keys.test.ts  api-search.test.ts  cleanup-old-jobs.test.ts  helpers.ts  login.test.ts  manage-profile.test.ts  query-jobs.test.ts  search-jobs.test.ts  send-matches.test.ts  submit-job.test.ts
